<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="open.hui.ren.githubclientdemo.main.MainActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">
    </androidx.appcompat.widget.Toolbar>
    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">
        <RelativeLayout
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout android:id="@+id/fragment_container"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:orientation="vertical"/>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/menuLL"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="start"
            android:layout_marginLeft="128dp"
            android:background="@color/colorPrimaryDark"
            android:clickable="true"
            android:orientation="vertical">
            <include layout="@layout/main_side_menu_layout"/>
        </LinearLayout>
    </androidx.drawerlayout.widget.DrawerLayout>
</RelativeLayout>
